# thumbanana

./: .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  USAGE.md  cookies.txt  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  start.bat  start.sh
app/: config.py  database.py  main.py
app/api/: auth.py  generate.py  history.py  images.py
app/i18n/: en.json  ko.json
app/models/: generation.py  session.py  usage.py  user.py
app/services/: auth_service.py  cache_service.py  gemini_service.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: base.html  history.html  index.html
app/templates/auth/: login.html  register.html
app/utils/: i18n.py
scripts/: init_db.py
